#This is the new change log, containing up-to-date info since version 0.5.3

Version 0.5.3
Bug fix release, with some features!
 - New Skipshow menu
 - UserAgent updated because of the upcoming rule change for api
 - Distutils is now included in our libraries
 - AutoSub is now able to handle UTF8 chars is shownames
 - matchScore escapes regex sensitive chars
 - API timer is now reset correctly
 - AutoSub now download subtitle with the correct linefeed on Windows platform